# c8-serenityOS

./: .gitignore  CMakeLists.txt
Rom/: Chip8Picture.ch8:Zone.Identifier  test_opcode.ch8:Zone.Identifier
rom/: IBM Logo.ch8:Zone.Identifier
src/: Chip8.cpp  Chip8.h  main.cpp  screen.cpp  screen.h  stack.h
